// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [MockFunction],
      "widgetSettings": {},
    }
  }
>
  <div
    className="sg-dpfgvb-wrapper"
  >
    <Button
      color="secondary"
      disabled={false}
      onClick={[MockFunction]}
      testId="applyFilterButton"
      variant="link"
    >
      <Text
        string="common.apply"
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <div
    className="sg-dpfgvb-wrapper"
  >
    <Button
      color="secondary"
      disabled={false}
      onClick={[Function]}
      testId="applyFilterButton"
      variant="link"
    >
      <Text
        string="common.apply"
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": true,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <div
    className="sg-dpfgvb-wrapper"
  >
    <Button
      color="secondary"
      disabled={true}
      onClick={[Function]}
      testId="applyFilterButton"
      variant="link"
    >
      <Text
        string="common.apply"
      />
    </Button>
  </div>
</SurroundPortals>
`;
